# virtual_ecosystem_snakemake_template

./: .pre-commit-config.yaml  README.md  Snakefile  pyproject.toml
.github/workflows/: ci.yml
pbs-icl/: config.yaml
snakemake_helper/: ve_experiment.py
tests/: test_ve_experiment.py
workflow-profile/: config.yaml
