[project]
name = "virtual-ecosystem-snakemake-template"
description = "A template repository for running Virtual Ecosystem analyses using Snakemake."
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Alex Dewar", email = "a.dewar@imperial.ac.uk" }]
requires-python = '>=3.11,<4.0'
dependencies = [
  'snakemake (>=9.14.5,<10.0.0)',
  'pre-commit (>=4.5.1,<5.0.0)',
  'virtual-ecosystem @ git+https://github.com/ImperialCollegeLondon/virtual_ecosystem.git@0f4f9ed',
  'mypy (>=1.5.1,<2.0.0)',
  'pytest (>=8.3.5,<9.0.0)',
  'pytest-cov (>=7.0.0,<8.0.0)',
  'numpy (>=2.0,<3.0)',
  'ruff (>=0.14.10,<0.15.0)',
]

[tool.poetry]
package-mode = false

[tool.mypy]
ignore_missing_imports = true
exclude = [".venv/"]

[tool.ruff]
target-version = "py311"
lint.select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "RUF", # ruff
]
lint.ignore = ["D203", "D213"]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=snakemake_helper --cov-report=html --doctest-modules snakemake_helper tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
